--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# Config
+Sky# Config
 # ========================================================================================
 
 
@@ -31,7 +31,7 @@ keywords:              []
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-logo:                  /assets/img/logo.png
+logo:                  /assets/img/PotLogo.jpg
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
@@ -86,7 +86,7 @@ theme: jekyll-theme-hydejack
 # ----------------------------------------------------------------------------------------
  
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/sidebar-bg.jpg
+accent_image:          /assets/img/BlueSky.PNG
 accent_color:          rgb(79,177,186)
 
 # This is used for the `theme-color` meta tag,
